[project]
name = "planning-agent"
version = "0.1.0"
description = "Plan-and-Execute agent using LangGraph, LM Studio, and LangFuse"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langchain>=0.3.14,<1.0",
    "langchain-core>=0.3.29,<1.0",
    "langchain-community>=0.3.14,<1.0",
    "langchain-openai>=0.3.0,<1.0",
    "langgraph>=0.2.60,<1.0",
    "langsmith>=0.2.10",
    "langfuse>=2.60,<3.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
